variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: value unary_! is not a member of Int
while(!2*biscuits=caseOrange + 1) {
      ^RunHalf:3: error: not found: value biscuits
while(!2*biscuits=caseOrange + 1) {
         ^RunHalf:3: error: not found: value caseOrange
while(!2*biscuits=caseOrange + 1) {
                  ^